package CB1;

public abstract class MenhGia{
    public abstract void inmenhgia(int sotien);
    public abstract MenhGia KeTiep(MenhGia menhgia);
}
